Change small details

--- a/index.html
+++ b/index.html
@@ -299,13 +299,13 @@
 									<a href="" class="breadcrumbs__list">Home</a>
 								</li>
 								<li class="breadcrumbs__item">
-									<a href="" class="breadcrumbs__list">Media</a>
+									<a href="" class="breadcrumbs__list">Components</a>
 								</li>
 								<li class="breadcrumbs__item">
-									<a href="" class="breadcrumbs__list">Photos</a>
+									<a href="" class="breadcrumbs__list">Buttons</a>
 								</li>
 								<li class="breadcrumbs__item">
-									<a href="" class="breadcrumbs__list"><span>Nature</span></a>
+									<a href="" class="breadcrumbs__list"><span>Radio Buttons</span></a>
 								</li>
 							</ul>
 						 </div>
